
add_executable(62 62.cpp)
add_executable(64 64.cpp)
add_executable(65 65.cpp)
add_executable(68 68.cpp)
add_executable(69 69.cpp)
add_executable(75 75.cpp)
add_executable(76 76.cpp)
add_executable(77 77.cpp)
add_executable(78 78.cpp)
add_executable(79 79.cpp)
add_executable(80 80.cpp)
add_executable(81 81.cpp)
add_executable(82 82.cpp)
add_executable(85 85.cpp)
add_executable(89 89.cpp)
add_executable(90 90.cpp)
add_executable(92 92.cpp)
add_executable(93 93.cpp)
add_executable(94 94.cpp)
add_executable(95 95.cpp)
add_executable(96 96.cpp)
add_executable(97 97.cpp)


